# RubiksCubeSolver

./: CMakeLists.txt  main.cpp
Models/: GenericRubiksCubeModel.cpp  GenericRubiksCubeModel.h  RubiksCube1DArray.cpp  RubiksCube3DArray.cpp  RubiksCubeBitboard.cpp
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
Scanner/: CubeScanner.cpp  CubeScanner.h
Solver/: BFSsolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSsolver.h
